fixed bug with overlap

--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -22,6 +22,8 @@ ul {
 /* шапка */
 
 header {
+    position: fixed;
+    left: 300px;
     width: calc(100vw - 300px - 46px - 17px);
     border-bottom: 1px solid #13429E;
     display: flex;
@@ -55,23 +57,13 @@ header h2 {
     display: block;
 }
 
-/* интерфейс для фиксации */
-
-.interface {
-    padding: 0;
-    margin: 0;
-    height:100vh;
-    max-width: 100vw;
-    display: flex;
-    position: fixed;
-}
-
 /* менюшка */
 
 .menu {
     width: 300px;
     background: linear-gradient(180deg, #092659 7.6%, #151821 116.35%);
     min-height:100vh;
+    position: fixed;
 }
 
 .nav-list-element a {
@@ -275,9 +267,8 @@ footer{
     margin: 25vh 0 3.2vh 0;
 }
 
-.source p {
+.source a {
     color: #1347AD;
     display: block;
     text-align: center;
-    z-index: 1000;
 }
